--- a/develop/blocks/modal/modal.scss
+++ b/develop/blocks/modal/modal.scss
@@ -46,7 +46,7 @@
         right: 0;
         left: auto;
         top: 0;
-        padding: 6  5px 20px 25px;
+        padding: 60px 15px 20px 25px;
 
         display: flex;
         flex-flow: column nowrap;
