--- a/develop/blocks/base-checkbox/base-checkbox.pug
+++ b/develop/blocks/base-checkbox/base-checkbox.pug
@@ -1,9 +1,4 @@
-mixin base-checkbox(id, name, value, label, checked, required)
-    +b.base-checkbox
-        if (checked)
-            +e.INPUT.input(type='checkbox' id='#{id}' name='#{name}' value='#{value}' checked required='#{required}')
-        else
-            +e.INPUT.input(type='checkbox' id='#{id}' name='#{name}' value='#{value}' required='#{required}')
-        +e.LABEL.label(for='#{id}')= label
-        +e.errors
-            +e.error-message Текст ошибки
+mixin base-checkbox(name, id, label, required)
+    +b.base-checkbox&attributes(attributes)
+        +e.INPUT.input(type='checkbox' name=name id=id required=required)&attributes(attributes)
+        +e.LABEL.label(for=id) !{label}
