--- a/develop/blocks/base-checkbox/base-checkbox.scss
+++ b/develop/blocks/base-checkbox/base-checkbox.scss
@@ -1,93 +1,74 @@
 .base-checkbox {
+    $this: &;
     position: relative;
-    width: 100%;
 
-    font-size: 16px;
-    font-weight: 400;
-    line-height: normal;
-    text-align: center;
-}
+    &__label {
+        display: block;
+        position: relative;
+        padding: 0;
+        padding-left: 24px;
 
-.base-checkbox__input {
-    position: absolute;
-    width: 0;
-    height: 0;
-    opacity: 0;
-}
+        color: $text-color;
+        font-size: 14px;
+        line-height: 1.2;
 
-.base-checkbox__label {
-    display: block;
-    width: 100%;
-    position: relative;
-    padding-left: 33px;
+        cursor: pointer;
 
-    text-align: left;
+        &::before {
+            content: '';
+            position: absolute;
+            width: 16px;
+            height: 16px;
+            top: 50%;
+            left: 0;
+            transform: translateY(-45%);
 
-    cursor: pointer;
+            border: solid 1px $theme-color;
+            border-radius: 4px;
+            background-color: #fff;
 
-    &::before {
-        content: '';
-        position: absolute;
-        box-sizing: border-box;
-        width: 16px;
-        height: 16px;
-        left: 0;
-        top: 50%;
-        transform: translateY(-40%);
+            transition: all 300ms ease;
+            box-sizing: border-box;
+        }
 
-        border: 1px solid #848f9b;
-        background-color: #fff;
+        &::after {
+            content: '';
+            position: absolute;
+            width: 4px;
+            height: 8px;
+            left: 5px;
+            top: 50%;
 
-        transition: background-color 300ms ease;
+            border-width: 0 1px 1px 0;
+            border-style: solid;
+            transform: rotate(45deg) translate(-55%, -45%);
+            border-color: $text-color;
+            opacity: 0;
+
+            transition: opacity 300ms ease;
+        }
     }
 
-    &::after {
-        content: '';
+    &__input {
         position: absolute;
-        width: 16px;
-        height: 16px;
-        left: 0;
-        top: 50%;
-        transform: translateY(-40%);
-
-        background-image: url('../images/redesign/layout/checked-black.svg');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: 10px 8px;
-
         opacity: 0;
 
-        transition: opacity 300ms ease;
-    }
-}
+        &:checked + #{$this}__label {
+            &::before {
+                background-color: $theme-color;
+            }
 
-.base-checkbox__input:checked+.base-checkbox__label {
-    &::before {
-        background-color: $theme-color;
-    }
+            &::after {
+                opacity: 1;
+            }
+        }
 
-    &::after {
-        opacity: 1;
-    }
-}
+        &:disabled + #{$this}__label {
+            color: #696969;
 
-.base-checkbox__errors {
-    display: none;
-    position: relative;
-    margin-top: 5px;
-
-    font-size: 14px;
-    color: #f52f4b;
-}
-
-@media (max-width: 480px) {
-    .base-checkbox {
-        font-size: 12px;
-    }
-
-    .base-checkbox__label {
-        min-width: 45px;
-        padding: 7px 12px;
-        padding-left: 27px;
+            &::before {
+                border-color: #696969;
+            }
+        }
     }
 }
