--- a/develop/blocks/base-radio/base-radio.scss
+++ b/develop/blocks/base-radio/base-radio.scss
@@ -1,57 +1,47 @@
 .base-radio {
     position: relative;
     width: 100%;
-    
+
     font-size: 14px;
     font-weight: 400;
     line-height: normal;
     text-align: center;
-}
 
-.base-radio__input {
-    position: absolute;
-    width: 0;
-    height: 0;
-    opacity: 0;
-}
+    &__input {
+        position: absolute;
+        width: 0;
+        height: 0;
+        opacity: 0;
 
-.base-radio__label {
-    display: block;
-    position: relative;
-    padding: 10px 22px;
-    min-width: 72px;
-
-    border-radius: 4px;
-    border: 1px solid #3c7bd8;
-    background-color: $text-color-light;
-    
-    cursor: pointer;
-
-    transition: color 300ms ease,
-                background-color 300ms ease;
-}
-
-.base-radio__input:checked + .base-radio__label {
-    background-color: #3c7bd8;
-    color: $text-color-light;
-}
-
-.base-radio__errors {
-    display: none;
-    position: relative;
-    margin-top: 5px;
-
-    font-size: 14px;
-    color: #f52f4b;
-}
-
-@media (max-width: 480px) {
-    .base-radio {
-        font-size: 12px;
+        &:checked {
+            + .base-radio__label {
+                background-color: $theme-color;
+                border-color: $theme-color;
+            }
+        }
     }
 
-    .base-radio__label {
-        min-width: 45px;
-        padding: 7px 12px;
+    &__label {
+        display: block;
+        position: relative;
+        padding: 4px 20px;
+        min-width: 58px;
+
+        border-radius: 4px;
+        border: 1px solid $text-color;
+        background-color: transparent;
+
+        cursor: pointer;
+
+        transition: border-color 300ms ease, background-color 300ms ease;
+    }
+
+    &__errors {
+        display: none;
+        position: relative;
+        margin-top: 5px;
+
+        font-size: 14px;
+        color: #f52f4b;
     }
 }
