--- a/develop/jade/template/footer.pug
+++ b/develop/jade/template/footer.pug
@@ -3,9 +3,9 @@ mixin doc-footer()
     script(src='libs/jquery.min.js')
     script(src='libs/slick/slick.min.js')
     script(src='libs/jquery.inputmask.min.js')
-    script(src='libs/fancybox/jquery.fancybox.js')
+    //- script(src='libs/fancybox/jquery.fancybox.js')
     script(src='libs/svgxuse.js')
-    //- script(src='libs/simpleBar/simplebar.js')
+    script(src='libs/simpleBar/simplebar.js')
     //- script(src='libs/aos/aos.min.js')
     script(src='libs/tooltips/popper.js')
     script(src='libs/tooltips/tooltip.js')
