--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1097,7 +1097,7 @@ th {
 
 .account-details__step-header {
   position: relative;
-  padding: 14px 24px 15px 48px;
+  padding: 14px 24px 15px 24px;
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -1115,11 +1115,11 @@ th {
     content: '';
     position: absolute;
     top: 50%;
-    left: 16px;
+    left: 8px;
     margin-top: -3px;
     border: solid #000;
     border-width: 0 1px 1px 0;
-    padding: 5px;
+    padding: 3px;
     -webkit-transform: translateY(-50%) rotate(45deg);
        -moz-transform: translateY(-50%) rotate(45deg);
         -ms-transform: translateY(-50%) rotate(45deg);
@@ -1128,7 +1128,7 @@ th {
 .account-details__step-title {
   position: relative;
   padding-right: 12px;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 600; }
 
 .account-details__step-link {
@@ -1163,7 +1163,7 @@ th {
     background-image: url(../images/redesign/account/clock-icon.svg); }
 
 .account-details__step-body {
-  padding: 8px 32px 32px 48px; }
+  padding: 8px 32px 32px 24px; }
 
 .account-details__inputs-row {
   display: grid;
@@ -1171,23 +1171,19 @@ th {
   grid-template-columns: repeat(auto-fit, minmax(146px, 1fr)); }
 
 .account-details__input {
-  -webkit-box-flex: 1;
-     -moz-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
   margin-bottom: 28px; }
 
-.account-details__radios-block {
-  margin-bottom: 28px; }
-  .account-details__radios-block--2x {
-    grid-column: span 2; }
-
-.account-details__radios-label {
+.account-details__input-label {
   display: block;
   margin-bottom: 8px;
   font-size: 14px;
   color: #696969;
   line-height: 1.4; }
+
+.account-details__radios-block, .account-details__checkboxes-block {
+  margin-bottom: 28px; }
+  .account-details__radios-block--2x, .account-details__checkboxes-block--2x {
+    grid-column: span 2; }
 
 .account-details__radios-row {
   display: -webkit-box;
@@ -1206,6 +1202,11 @@ th {
   margin-right: 12px;
   margin-bottom: 12px; }
   .account-details__radio:last-child {
+    margin-right: 0; }
+
+.account-details__checkbox {
+  margin-bottom: 12px; }
+  .account-details__checkbox:last-child {
     margin-right: 0; }
 
 .account-details__subtitle {
@@ -1231,6 +1232,17 @@ th {
   transition: background-color 300ms ease; }
   .account-details__submit:hover {
     background-color: #fed63f; }
+
+@media (min-width: 768px) {
+  .account-details__step-header {
+    padding-left: 48px; }
+    .account-details__step-header::before {
+      left: 16px;
+      padding: 5px; }
+  .account-details__step-title {
+    font-size: 16px; }
+  .account-details__step-body {
+    padding-left: 48px; } }
 
 .account-layout {
   position: relative;
@@ -1991,6 +2003,10 @@ th {
     top: 8px;
     font-size: 14px;
     color: #696969;
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     -webkit-transition: color 200ms ease, -webkit-transform 200ms ease;
     transition: color 200ms ease, -webkit-transform 200ms ease;
     -moz-transition: transform 200ms ease, color 200ms ease, -moz-transform 200ms ease;
@@ -1999,8 +2015,7 @@ th {
     -webkit-transform-origin: left center;
        -moz-transform-origin: left center;
         -ms-transform-origin: left center;
-            transform-origin: left center;
-    pointer-events: none; }
+            transform-origin: left center; }
     .base-input__label.js-focus {
       -webkit-transform: scale(0.7) translateY(-145%);
          -moz-transform: scale(0.7) translateY(-145%);
@@ -2033,7 +2048,8 @@ th {
        -moz-transform: translateY(-50%) rotate(45deg);
         -ms-transform: translateY(-50%) rotate(45deg);
             transform: translateY(-50%) rotate(45deg); }
-  .base-input-autocomplete .base-input__input {
+  .base-input-autocomplete .base-input__input,
+  .base-input-autocomplete .base-input__label {
     padding-right: 32px; }
   .base-input-autocomplete .tt-dropdown-menu {
     position: absolute;
