--- a/develop/blocks/base-input/base-input.pug
+++ b/develop/blocks/base-input/base-input.pug
@@ -10,7 +10,7 @@ mixin base-input-autocomplete(inputType, id, name, label, required)
         span
             block
             +e.INPUT.input(inputType, id, name, label, required)
-        +e.LABEL.label(for=id)= label
+        +e.LABEL.label(for=id title=label)= label
         +e.errors
             +e.error-message Текст ошибки
 
