--- a/develop/blocks/base-input/base-input.scss
+++ b/develop/blocks/base-input/base-input.scss
@@ -79,10 +79,15 @@
         font-size: 14px;
         color: #696969;
 
+        width: 100%;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+
         transition: transform 200ms ease, color 200ms ease;
         transform-origin: left center;
 
-        pointer-events: none;
+        // pointer-events: none;
 
         &.js-focus {
             transform: scale(0.7) translateY(-145%);
@@ -122,7 +127,8 @@
         transform: translateY(-50%) rotate(45deg);
     }
 
-    .base-input__input {
+    .base-input__input,
+    .base-input__label {
         padding-right: 32px;
     }
 
