--- a/develop/blocks/account-nav/account-nav.pug
+++ b/develop/blocks/account-nav/account-nav.pug
@@ -2,13 +2,13 @@ mixin account-nav()
     +b.NAV.account-nav
         +e.UL.list
             +e.LI.item
-                +e.A.link.active(href='#') Мониторинг
+                +e.A.link(href='#') Мониторинг
             +e.LI.item
                 +e.A.link(href='#') Документы
             +e.LI.item
                 +e.A.link(href='#') Новости
             +e.LI.item
-                +e.A.link(href='#') Реквизиты
+                +e.A.link.active(href='#') Реквизиты
             +e.LI.item
                 +e.A.link(href='#') Партнерская программа
 
