--- a/develop/blocks/account-wizard/account-wizard.pug
+++ b/develop/blocks/account-wizard/account-wizard.pug
@@ -2,7 +2,7 @@ mixin account-wizard()
     +b.SECTION.account-wizard
         +e.title
             +title('h1', 'account')
-                | Здравствуйте, мы поможем вам&nbsp;инвестировать в первый объект
+                | Здравствуйте, мы&nbsp;поможем&nbsp;вам инвестировать в&nbsp;первый&nbsp;объект
         +e.steps
             +e.step
                 +e.step-header
@@ -14,7 +14,7 @@ mixin account-wizard()
                 +e.step-header
                     +e.step-label второй шаг
                     +e.step-status.--current текущий
-                +e.step-title Выберите объект и размер пая
+                +e.step-title Выберите объект и размер&nbsp;пая
                 +e.step-text Все объекты для инвестирования можно найти в разделе доступной недвижимости
                 +e.BUTTON.step-action.btn(type='button') Выбрать
             +e.step
