--- a/develop/jade/template/footer.pug
+++ b/develop/jade/template/footer.pug
@@ -9,7 +9,7 @@ mixin doc-footer()
     //- script(src='libs/aos/aos.min.js')
     script(src='libs/tooltips/popper.js')
     script(src='libs/tooltips/tooltip.js')
-    //- script(src='libs/dropzone.js')
+    script(src='libs/dropzone.js')
     script(src='libs/nouislider/nouislider.js')
     script(src='libs/nouislider/wNumb.js')
     script(src='libs/micromodal.min.js')
