--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1214,6 +1214,99 @@ th {
   font-size: 16px;
   font-weight: 600; }
 
+.account-details__files-row {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+     -moz-box-orient: horizontal;
+     -moz-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  margin: 0 -24px; }
+  .account-details__files-row:last-child {
+    margin-bottom: -32px; }
+  .account-details__files-row:first-child {
+    padding-top: 24px; }
+
+.account-details__file-block {
+  position: relative;
+  width: 50%;
+  min-width: 300px;
+  padding: 0 24px 32px; }
+
+.account-details__file-upload {
+  position: relative;
+  width: 235px;
+  height: 226px;
+  color: #979797;
+  border: 1px solid currentColor;
+  cursor: pointer; }
+  .account-details__file-upload::before, .account-details__file-upload::after {
+    content: '';
+    position: absolute;
+    width: 90px;
+    height: 1px;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+       -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    -webkit-transition: 300ms ease 200ms;
+    -moz-transition: 300ms ease 200ms;
+    transition: 300ms ease 200ms;
+    background-color: currentColor; }
+  .account-details__file-upload::after {
+    -webkit-transform: translate(-50%, -50%) rotate(-90deg);
+       -moz-transform: translate(-50%, -50%) rotate(-90deg);
+        -ms-transform: translate(-50%, -50%) rotate(-90deg);
+            transform: translate(-50%, -50%) rotate(-90deg); }
+  .account-details__file-upload .dz-preview {
+    display: none; }
+  .account-details__file-upload.error {
+    color: #ff2b2b; }
+    .account-details__file-upload.error::before {
+      -webkit-transform: translate(-50%, -50%) rotate(45deg);
+         -moz-transform: translate(-50%, -50%) rotate(45deg);
+          -ms-transform: translate(-50%, -50%) rotate(45deg);
+              transform: translate(-50%, -50%) rotate(45deg); }
+    .account-details__file-upload.error::after {
+      -webkit-transform: translate(-50%, -50%) rotate(-45deg);
+         -moz-transform: translate(-50%, -50%) rotate(-45deg);
+          -ms-transform: translate(-50%, -50%) rotate(-45deg);
+              transform: translate(-50%, -50%) rotate(-45deg); }
+  .account-details__file-upload.success, .account-details__file-upload.has-data {
+    color: #5fce67; }
+    .account-details__file-upload.success::before, .account-details__file-upload.has-data::before {
+      top: 65%;
+      left: 30%;
+      -webkit-transform: scaleX(0.45) scaleY(1.3) rotate(15deg) translate(-50%, -50%);
+         -moz-transform: scaleX(0.45) scaleY(1.3) rotate(15deg) translate(-50%, -50%);
+          -ms-transform: scaleX(0.45) scaleY(1.3) rotate(15deg) translate(-50%, -50%);
+              transform: scaleX(0.45) scaleY(1.3) rotate(15deg) translate(-50%, -50%); }
+    .account-details__file-upload.success::after, .account-details__file-upload.has-data::after {
+      -webkit-transform: translate(-23%, 150%) rotate(125deg);
+         -moz-transform: translate(-23%, 150%) rotate(125deg);
+          -ms-transform: translate(-23%, 150%) rotate(125deg);
+              transform: translate(-23%, 150%) rotate(125deg);
+      top: 48%; }
+
+.account-details__upload-label {
+  display: block;
+  margin-bottom: 4px;
+  min-height: 34px;
+  font-size: 14px;
+  color: #696969; }
+
+.account-details__upload-status {
+  position: absolute;
+  top: 6px;
+  left: 12px;
+  font-size: 8px; }
+
 .account-details__submit {
   padding: 0;
   margin: 0;
@@ -1245,113 +1338,212 @@ th {
     padding-left: 48px; } }
 
 .account-layout {
-  position: relative;
-  padding-top: 24px;
-  padding-bottom: 40px; }
+  position: relative; }
   .account-layout .lines {
-    height: -webkit-calc(100% + 20px);
-    height: -moz-calc(100% + 20px);
-    height: calc(100% + 20px); }
+    display: none; }
     .account-layout .lines .line::after {
       opacity: 0; }
+  .account-layout__wrapper {
+    padding-top: 24px;
+    padding-bottom: 40px; }
   .account-layout__sidebar {
-    margin-bottom: 50px; }
+    margin-bottom: 30px; }
 
 @media (min-width: 768px) {
-  .account-layout {
-    padding-top: 64px;
-    padding-bottom: 64px; }
-    .account-layout .lines {
-      top: 0;
-      height: 100%; }
-    .account-layout__wrapper {
-      display: -webkit-box;
-      display: -moz-box;
-      display: -ms-flexbox;
-      display: flex; }
-    .account-layout__sidebar {
-      width: -webkit-calc(100% / 3);
-      width: -moz-calc(100% / 3);
-      width: calc(100% / 3);
-      padding-right: 10px; }
-    .account-layout__main {
-      width: -webkit-calc(100% / 3 * 2);
-      width: -moz-calc(100% / 3 * 2);
-      width: calc(100% / 3 * 2); } }
+  .account-layout__wrapper {
+    max-width: 760px;
+    margin: 0 auto;
+    padding-top: 55px;
+    padding-bottom: 55px;
+    border-left: 1px solid rgba(145, 145, 145, 0.22);
+    border-right: 1px solid rgba(145, 145, 145, 0.22); } }
 
 @media (min-width: 1200px) {
+  .account-layout .lines {
+    display: block; }
+  .account-layout__wrapper {
+    max-width: none;
+    padding-top: 64px;
+    padding-bottom: 64px;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    border: none; }
   .account-layout__sidebar {
     width: 400px; }
   .account-layout__main {
     width: 760px; } }
 
-.account-nav__list {
-  padding: 0;
-  margin: 0;
-  list-style: none; }
-
-.account-nav__item {
-  margin-bottom: 10px; }
-  .account-nav__item:last-child {
-    margin-bottom: 0; }
-
-.account-nav__link {
-  position: relative;
-  padding: 3px 0;
-  font-size: 20px;
-  color: #000;
-  text-decoration: none;
-  -webkit-transition: color 300ms ease;
-  -moz-transition: color 300ms ease;
-  transition: color 300ms ease; }
-  .account-nav__link:hover, .account-nav__link:active, .account-nav__link:focus {
-    color: #fed63f;
-    text-decoration: none; }
-  .account-nav__link.active {
-    font-weight: 600; }
-    .account-nav__link.active::before {
+.account-nav {
+  width: -webkit-calc(100% + 40px);
+  width: -moz-calc(100% + 40px);
+  width: calc(100% + 40px);
+  margin-left: -20px; }
+  .account-nav.full {
+    width: 100%;
+    margin: 0; }
+  .account-nav__list {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    border-bottom: 1px solid #ebebeb; }
+    .account-nav__list .slick-list {
+      padding-left: 20px;
+      padding-bottom: 2px;
+      margin-bottom: -2px; }
+  .account-nav__link {
+    display: block;
+    position: relative;
+    padding: 3px 6px;
+    font-size: 12px;
+    white-space: nowrap;
+    color: #000;
+    text-decoration: none;
+    -webkit-transition: color 300ms ease;
+    -moz-transition: color 300ms ease;
+    transition: color 300ms ease; }
+    .account-nav__link:hover, .account-nav__link:active, .account-nav__link:focus {
+      color: #fed63f;
+      text-decoration: none; }
+    .account-nav__link::after {
       content: '';
       position: absolute;
-      width: 12px;
-      height: 12px;
-      left: -15px;
-      top: 9px;
-      -webkit-transform: rotate(-45deg);
-         -moz-transform: rotate(-45deg);
-          -ms-transform: rotate(-45deg);
-              transform: rotate(-45deg);
-      border-width: 0 1px 1px 0;
-      border-style: solid;
-      border-color: #fed63f; }
+      width: 100%;
+      height: 2px;
+      bottom: -1px;
+      left: 0;
+      -webkit-transform: scaleX(0);
+         -moz-transform: scaleX(0);
+          -ms-transform: scaleX(0);
+              transform: scaleX(0);
+      background-color: #fed63f;
+      -webkit-transition: -webkit-transform 300ms ease;
+      transition: -webkit-transform 300ms ease;
+      -moz-transition: transform 300ms ease, -moz-transform 300ms ease;
+      transition: transform 300ms ease;
+      transition: transform 300ms ease, -webkit-transform 300ms ease, -moz-transform 300ms ease; }
+    .account-nav__link.active {
+      font-weight: 600; }
+    .account-nav__link.active::after {
+      -webkit-transform: scaleX(1);
+         -moz-transform: scaleX(1);
+          -ms-transform: scaleX(1);
+              transform: scaleX(1); }
+
+@media (min-width: 768px) {
+  .account-nav {
+    width: 100%;
+    margin: 0; }
+    .account-nav__item {
+      -webkit-box-flex: 1;
+         -moz-box-flex: 1;
+          -ms-flex: 1 1 auto;
+              flex: 1 1 auto; }
+    .account-nav__link {
+      padding: 5px 12px;
+      font-size: 14px;
+      text-align: center; } }
 
 @media (min-width: 1200px) {
   .account-nav {
     position: -webkit-sticky;
     position: sticky;
     top: 20px; }
-    .account-nav__link.active::before {
-      left: -25px; } }
+    .account-nav__list {
+      display: block;
+      border: none; }
+    .account-nav__item {
+      margin-bottom: 10px; }
+      .account-nav__item:last-child {
+        margin-bottom: 0; }
+    .account-nav__link {
+      position: relative;
+      display: inline-block;
+      padding: 3px 0;
+      font-size: 20px;
+      text-align: left;
+      -webkit-transition: color 300ms ease;
+      -moz-transition: color 300ms ease;
+      transition: color 300ms ease; }
+      .account-nav__link:hover, .account-nav__link:active, .account-nav__link:focus {
+        color: #fed63f;
+        text-decoration: none; }
+      .account-nav__link.active {
+        font-weight: 600; }
+        .account-nav__link.active::before {
+          content: '';
+          position: absolute;
+          width: 12px;
+          height: 12px;
+          left: -25px;
+          top: 9px;
+          -webkit-transform: rotate(-45deg);
+             -moz-transform: rotate(-45deg);
+              -ms-transform: rotate(-45deg);
+                  transform: rotate(-45deg);
+          border-width: 0 1px 1px 0;
+          border-style: solid;
+          border-color: #fed63f; }
+        .account-nav__link.active::after {
+          display: none; } }
+
+.modal .account-settings .modal__dialog {
+  padding: 0;
+  max-width: 320px; }
+
+.modal .account-settings__title {
+  padding: 24px 20px;
+  margin-bottom: 42px;
+  font-size: 16px;
+  border-bottom: 1px solid #919191; }
+
+.modal .account-settings__close {
+  width: 24px;
+  height: 24px;
+  top: 20px;
+  right: 30px;
+  left: auto; }
+  .modal .account-settings__close svg {
+    width: 12px;
+    height: 12px;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+       -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    stroke-width: 2px; }
+
+.modal .account-settings__action {
+  padding: 0 20px 25px;
+  margin-top: 24px; }
 
 .modal .account-settings__submit {
-  margin-top: 0;
-  margin-bottom: 10px; }
+  width: 100%;
+  min-width: 174px;
+  padding: 10px 32px 9px;
+  margin-bottom: 12px;
+  font-size: 14px; }
 
 .modal .account-settings__submit-tip {
   font-size: 12px;
   line-height: 1.2;
-  color: #9c9c9c; }
+  color: #9c9c9c;
+  text-align: center; }
 
-.modal .account-settings__title {
-  margin-bottom: 24px; }
-
-.modal .account-settings__action {
-  margin-bottom: 24px; }
+.modal .account-settings__form {
+  padding: 0 20px; }
 
 .modal .account-settings__block {
   margin-bottom: 32px; }
 
 .modal .account-settings__subtitle {
-  margin-bottom: 16px;
+  margin-bottom: 20px;
   font-size: 16px;
   font-weight: 600; }
 
@@ -1369,23 +1561,27 @@ th {
 
 @media (min-width: 1024px) {
   .modal .account-settings .modal__dialog {
-    max-width: 768px; }
-  .modal .account-settings__header {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: start;
-       -moz-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    -webkit-box-pack: justify;
-       -moz-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    margin-bottom: 40px; }
-  .modal .account-settings__submit-tip {
-    text-align: center; }
+    max-width: 768px;
+    padding: 90px 60px 70px 90px; }
+  .modal .account-settings__close {
+    width: 30px;
+    height: 30px;
+    left: 32px;
+    top: 28px; }
+    .modal .account-settings__close svg {
+      width: 100%;
+      height: 100%;
+      stroke-width: 1px; }
+  .modal .account-settings__title {
+    padding: 0;
+    margin-bottom: 25px;
+    border-bottom: none;
+    font-size: 30px; }
+  .modal .account-settings__action {
+    padding: 0;
+    position: absolute;
+    margin-top: -12px;
+    right: 60px; }
   .modal .account-settings__form {
     display: -webkit-box;
     display: -moz-box;
@@ -1394,7 +1590,8 @@ th {
     -webkit-box-align: start;
        -moz-box-align: start;
         -ms-flex-align: start;
-            align-items: flex-start; }
+            align-items: flex-start;
+    padding: 0; }
   .modal .account-settings__data {
     width: 232px;
     -webkit-box-flex: 0;
@@ -1431,14 +1628,14 @@ th {
     width: 33%; } }
 
 .account-wizard__title {
-  margin-bottom: 30px; }
+  margin-bottom: 16px; }
 
 .account-wizard__steps {
   margin-bottom: -32px; }
 
 .account-wizard__step {
-  padding: 16px 20px 24px;
-  margin-bottom: 32px;
+  padding: 16px 20px 20px;
+  margin-bottom: 16px;
   min-height: 234px;
   display: -webkit-box;
   display: -moz-box;
@@ -1505,7 +1702,7 @@ th {
 
 .account-wizard__step-title {
   margin-bottom: 12px;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 1.2;
   font-weight: 600; }
 
@@ -1518,6 +1715,8 @@ th {
   margin-top: auto; }
 
 @media (min-width: 1024px) {
+  .account-wizard__title {
+    margin-bottom: 30px; }
   .account-wizard__steps {
     display: -webkit-box;
     display: -moz-box;
@@ -9278,8 +9477,10 @@ th {
   line-height: 1.2; }
   .title.main {
     font-size: 32px; }
-  .title.small, .title.account {
+  .title.small {
     font-size: 20px; }
+  .title.account {
+    font-size: 24px; }
   .title.medium {
     font-size: 24px; }
   .title.light {
