--- a/develop/blocks/account-layout/account-layout.scss
+++ b/develop/blocks/account-layout/account-layout.scss
@@ -1,48 +1,56 @@
 .account-layout {
     position: relative;
-    padding-top: 24px;
-    padding-bottom: 40px;
 
     .lines {
-        height: calc(100% + 20px);
+        display: none;
 
         .line::after {
             opacity: 0;
         }
     }
 
+    &__wrapper {
+        padding-top: 24px;
+        padding-bottom: 40px;
+    }
+
     &__sidebar {
-        margin-bottom: 50px;
+        margin-bottom: 30px;
     }
 }
 
 @media #{$tablet} {
     .account-layout {
-        padding-top: 64px;
-        padding-bottom: 64px;
-
-        .lines {
-            top: 0;
-            height: 100%;
-        }
-
         &__wrapper {
-            display: flex;
-        }
+            max-width: 760px;
+            margin: 0 auto;
+            padding-top: 55px;
+            padding-bottom: 55px;
 
-        &__sidebar {
-            width: calc(100% / 3);
-            padding-right: 10px;
+            border-left: 1px solid rgba(#919191, 0.22);
+            border-right: 1px solid rgba(#919191, 0.22);
         }
 
         &__main {
-            width: calc(100% / 3 * 2);
         }
     }
 }
 
 @media #{$desktop} {
     .account-layout {
+        .lines {
+            display: block;
+        }
+
+        &__wrapper {
+            max-width: none;
+            padding-top: 64px;
+            padding-bottom: 64px;
+            display: flex;
+
+            border: none;   
+        }
+
         &__sidebar {
             width: 400px;
         }
