--- a/develop/blocks/account-nav/account-nav.scss
+++ b/develop/blocks/account-nav/account-nav.scss
@@ -1,23 +1,34 @@
 .account-nav {
+    width: calc(100% + 40px);
+    margin-left: -20px;
+
+    &.full {
+        width: 100%;
+        margin: 0;
+    }
+
     &__list {
         padding: 0;
         margin: 0;
         list-style: none;
-    }
+        display: flex;
 
-    &__item {
-        margin-bottom: 10px;
+        border-bottom: 1px solid #ebebeb;
 
-        &:last-child {
-            margin-bottom: 0;
+        .slick-list {
+            padding-left: 20px;
+            padding-bottom: 2px;
+            margin-bottom: -2px;
         }
     }
 
     &__link {
+        display: block;
         position: relative;
-        padding: 3px 0;
+        padding: 3px 6px;
 
-        font-size: 20px;
+        font-size: 12px;
+        white-space: nowrap;
         color: $text-color;
         text-decoration: none;
 
@@ -31,22 +42,28 @@
             text-decoration: none;
         }
 
+        &::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            bottom: -1px;
+            left: 0;
+
+            transform: scaleX(0);
+
+            background-color: $theme-color;
+
+            transition: transform 300ms ease;
+        }
+
         &.active {
             font-weight: 600;
+        }
 
-            &::before {
-                content: '';
-                position: absolute;
-                width: 12px;
-                height: 12px;
-                left: -15px;
-                top: 9px;
-
-                transform: rotate(-45deg);
-
-                border-width: 0 1px 1px 0;
-                border-style: solid;
-                border-color: $theme-color;
+        &.active {
+            &::after {
+                transform: scaleX(1);
             }
         }
     }
@@ -54,6 +71,19 @@
 
 @media #{$tablet} {
     .account-nav {
+        width: 100%;
+        margin: 0;
+
+        &__item {
+            flex: 1 1 auto;
+        }
+
+        &__link {
+            padding: 5px 12px;
+
+            font-size: 14px;
+            text-align: center;
+        }
     }
 }
 
@@ -61,11 +91,58 @@
     .account-nav {
         position: sticky;
         top: 20px;
-        
+
+        &__list {
+            display: block;
+            border: none;
+        }
+
+        &__item {
+            margin-bottom: 10px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+
         &__link {
+            position: relative;
+            display: inline-block;
+            padding: 3px 0;
+
+            font-size: 20px;
+            text-align: left;
+
+            transition: color 300ms ease;
+
+            &:hover,
+            &:active,
+            &:focus {
+                color: $theme-color;
+
+                text-decoration: none;
+            }
+
             &.active {
+                font-weight: 600;
+
                 &::before {
+                    content: '';
+                    position: absolute;
+                    width: 12px;
+                    height: 12px;
                     left: -25px;
+                    top: 9px;
+
+                    transform: rotate(-45deg);
+
+                    border-width: 0 1px 1px 0;
+                    border-style: solid;
+                    border-color: $theme-color;
+                }
+
+                &::after {
+                    display: none;
                 }
             }
         }
