--- a/develop/blocks/account-settings/account-settings.scss
+++ b/develop/blocks/account-settings/account-settings.scss
@@ -1,22 +1,59 @@
 .modal {
     .account-settings {
+        .modal__dialog {
+            padding: 0;
+            max-width: 320px;
+        }
+
+        &__title {
+            padding: 24px 20px;
+            margin-bottom: 42px;
+
+            font-size: 16px;
+            border-bottom: 1px solid #919191;
+        }
+
+        &__close {
+            width: 24px;
+            height: 24px;
+            top: 20px;
+            right: 30px;
+            left: auto;
+
+            svg {
+                width: 12px;
+                height: 12px;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+
+                stroke-width: 2px;
+            }
+        }
+
+        &__action {
+            padding: 0 20px 25px;
+            margin-top: 24px;
+        }
+
         &__submit {
-            margin-top: 0;
-            margin-bottom: 10px;
+            width: 100%;
+            min-width: 174px;
+            padding: 10px 32px 9px;
+            margin-bottom: 12px;
+
+            font-size: 14px;
         }
 
         &__submit-tip {
             font-size: 12px;
             line-height: 1.2;
             color: $text-color-medium;
+            text-align: center;
         }
 
-        &__title {
-            margin-bottom: 24px;
-        }
-
-        &__action {
-            margin-bottom: 24px;
+        &__form {
+            padding: 0 20px;
         }
 
         &__block {
@@ -24,7 +61,7 @@
         }
 
         &__subtitle {
-            margin-bottom: 16px;
+            margin-bottom: 20px;
 
             font-size: 16px;
             font-weight: 600;
@@ -51,22 +88,41 @@
         .account-settings {
             .modal__dialog {
                 max-width: 768px;
+                padding: 90px 60px 70px 90px;
             }
 
-            &__header {
-                display: flex;
-                align-items: flex-start;
-                justify-content: space-between;
-                margin-bottom: 40px;
+            &__close {
+                width: 30px;
+                height: 30px;
+                left: 32px;
+                top: 28px;
+
+                svg {
+                    width: 100%;
+                    height: 100%;
+                    stroke-width: 1px;
+                }
             }
 
-            &__submit-tip {
-                text-align: center;
+            &__title {
+                padding: 0;
+                margin-bottom: 25px;
+                border-bottom: none;
+
+                font-size: 30px;
+            }
+
+            &__action {
+                padding: 0;
+                position: absolute;
+                margin-top: -12px;
+                right: 60px;
             }
 
             &__form {
                 display: flex;
                 align-items: flex-start;
+                padding: 0;
             }
 
             &__data {
