--- a/develop/blocks/title/title.scss
+++ b/develop/blocks/title/title.scss
@@ -13,9 +13,12 @@
         font-size: 32px;
     }
 
-    &.small,
-    &.account {
+    &.small {
         font-size: 20px;
+    }
+
+    &.account {
+        font-size: 24px;
     }
 
     &.medium {
