--- a/develop/blocks/account-nav/account-nav.pug
+++ b/develop/blocks/account-nav/account-nav.pug
@@ -4,12 +4,12 @@ mixin account-nav()
             +e.LI.item
                 +e.A.link(href='#') Мониторинг
             +e.LI.item
-                +e.A.link(href='#') Документы
+                +e.A.link.--notify(href='#') Документы
             +e.LI.item
                 +e.A.link(href='#') Новости
             +e.LI.item
                 +e.A.link.active(href='#') Реквизиты
             +e.LI.item
-                +e.A.link(href='#') Партнерская программа
+                +e.A.link.--notify(href='#') Партнерская программа
 
 
